@@ -1,3 +1,8 @@
+2006-03-21  Han-Wen Nienhuys  <lilydev@localhost.localdomain>
+
+	* lily/slur-configuration.cc (add_score): disallow negative slur
+	scores.
+	
 2006-03-21  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* scm/framework-ps.scm (dump-stencil-as-EPS): remove debugging code.
